--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -27,8 +27,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ethereumjs/tx": "^5.3.0",
+    "@ethereumjs/util": "^9.0.3",
+    "@lit-protocol/auth-helpers": "^4.2.0",
+    "@lit-protocol/constants": "^4.2.0",
+    "@lit-protocol/lit-auth-client": "^4.2.0",
+    "@lit-protocol/lit-node-client": "^4.2.0",
+    "@lit-protocol/pkp-ethers": "^4.2.0",
+    "@lit-protocol/types": "^4.2.0",
+    "@metamask/keyring-api": "^5.1.0",
     "@metamask/snaps-sdk": "^3.2.0",
-    "buffer": "^6.0.3"
+    "@metamask/snaps-types": "^3.1.0",
+    "@metamask/snaps-ui": "^3.1.0",
+    "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
+    "ethers": "^6.11.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
