--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -39,10 +39,11 @@
     "@metamask/snaps-sdk": "^3.2.0",
     "@metamask/snaps-types": "^3.1.0",
     "@metamask/snaps-ui": "^3.1.0",
+    "@simplewebauthn/browser": "^9.0.1",
     "buffer": "^6.0.3",
     "crypto": "^1.0.1",
     "ethers": "^6.11.1",
-    "uuid": "^9.0.1"
+    "jose": "^5.2.4"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
